# peace_league_website

./: .gitignore  .graphify  .graphifyignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  MANIFEST.in  STATE.md  TRIAGE_REPORT.md  api.py  hooks.py  install-deploy-sudoers.sh  loop-budget.md  loop-constraints.md  loop-run-log.jsonl  loop-run-log.md  pyproject.toml
.agents/: README.md
docs/: audit-2026-07-17.md  loop-run-log.md
docs/adr/: 0001-loop-pipeline.md  0002-plan-substrate-sync.md  README.md
docs/agents/: PROJECT-BINDING.md
docs/plan-substrate/: LABEL-BOOTSTRAP.md  MAP-DRIFT-RULE.md  STAGE-4-GATE.md  STANDING-ORDERS.md
frontend/: .env.example  astro.config.mjs  deploy.sh  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/lighthouse-reports/: routes.txt  summary.csv  summary.json
frontend/public/: libredesk-agent.json
frontend/scripts/: collect-routes.mjs  collect-routes.test.mjs  lh-sweep.mjs  lighthouse-sweep.mjs  lighthouse-sweep.test.mjs  measure-hero.mjs  playwright-sweep.mjs  screenshot-all.mjs  serve-dist.mjs
frontend/src/: entry-client.ts  main.ts
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
peace_league_website/: __init__.py  api.py  api_awards.py  awards_scheduled.py  generate_sample_data.py  hooks.py  modules.txt  patches.txt  setup.py
peace_league_website/fixtures/: award_categories.json
peace_league_website/patches/: create_doctypes.py  patch_2026_07_22_01_award_categories.py  patch_2026_07_22_02_award_nominees.py  patch_2026_07_23_01_awards_admin_role.py
research/: ghost-anti-fraud-evaluation.md
(+446 files in other folders)
